books/projects/rac/tests/yaml_test/program_structure/empty.ref.stderr
empty.cpp:2-3 (0-0): syntax error, unexpected $end
  2 | # 1 "empty.cpp"
    | ^^^^^^^^^^^^^^^^
  3 | # 1 "empty.cpp"
    | 
